setup some s3 scripts

--- a/ingestion/s3_batch_ops/upload_FMA_media.ipynb
+++ b/ingestion/s3_batch_ops/upload_FMA_media.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "source": [
+    "# Data Ingestion: FMA Dataset\n",
+    "\n",
+    "From the FMA dataset, we'll filter out non-commercial licenses and then upload these audio files to S3. For training, though, we'll use the whole dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -164,22 +173,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ProcessPool(nodes=4) as P:\n",
-    "    gtr = get_all_track_ids(md.track_id)\n",
-    "    results = P.uimap(upload_mp3, gtr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = [r for r in results if r is not None]\n",
-    "results_series = pd.Series(results, name='track_id')\n",
-    "results_series.to_csv('uploaded_FMA_track_ids.csv')\n",
-    "uploaded_md = md.merge(results_series)\n",
-    "uploaded_md.to_csv('uploaded_FMA_metadata.csv')"
+    "def upload_and_log():\n",
+    "    with ProcessPool(nodes=4) as P:\n",
+    "        gtr = get_all_track_ids(md.track_id)\n",
+    "        results = P.uimap(upload_mp3, gtr)\n",
+    "    results = [r for r in results if r is not None]\n",
+    "    results_series = pd.Series(results, name='track_id')\n",
+    "    results_series.to_csv('uploaded_FMA_track_ids.csv')\n",
+    "    uploaded_md = md.merge(results_series)\n",
+    "    uploaded_md.to_csv('uploaded_FMA_metadata.csv')"
    ]
   }
  ],
